# Wixen-Chat

./: CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/plans/: 20260720-foundation-design.md
src/: lib.rs  main.rs
